src/objects/ContentLink__c.object
<CustomObject>
    <description>SFDC1-4384 Content Link is the object holding the documentation links for the MarkitSERV documentation customer portal</description>
    <fields>
        <fullName>ContentDirectory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4384 Lookup to the content directory</description>
        <inlineHelpText>Select content directory</inlineHelpText>
        <label>Content Directory</label>
        <referenceTo>ContentDirectory__c</referenceTo>
        <relationshipLabel>Content Links</relationshipLabel>
        <relationshipName>ContentLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JiraID__c</fullName>
        <description>SFDC1-4384 Jira Ticket Id associated to this Content Link</description>
        <inlineHelpText>Jira Ticket Id associated to this Content Link</inlineHelpText>
        <label>Jira ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-4384 Unique ID in Legacy system</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID in Legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>SFDC1-4384 Formula field to representing ContentDirectory Platform</description>
        <formula>TEXT(ContentDirectory__r.Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to representing ContentDirectory Platform</inlineHelpText>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>SFDC1-4384 Content link URL</description>
        <inlineHelpText>Content link URL</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Content Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>URL__c</columns>
        <columns>Platform__c</columns>
        <columns>ContentDirectory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>